--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
   </head>
 </head>
 <body>
-    
+    <div class="container d-flex justify-content-center mt-3">
+        <div class="qoute-wrapper text-center">
+            <h2 class="text-danger text-center mb-3 text-decoration-underline">-: Get Your Quotes Here :-</h2>
+            <div class="border border-2 border-info p-3 rounded" id="single-quote">
+                
+            </div>
+            <button type="button" class="btn btn-primary my-3">Get Quotes</button>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
