Added Onclick Event on Button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="border border-2 border-info p-3 rounded" id="single-quote">
                 
             </div>
-            <button type="button" class="btn btn-primary my-3">Get Quotes</button>
+            <button type="button" class="btn btn-primary my-3" onclick="getQoutes()">Get Quotes</button>
         </div>
     </div>
 
